--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -509,7 +509,7 @@ textarea::-ms-input-placeholder
     margin-bottom: 75px;
     font-family: 'open_sansregular';
     font-size: 20px;
-    color: #3a3f4b;
+    color: #ffffff;
 }
 
 
